Closed Bug 18784 Opened 26 years ago Closed 26 years ago

[blocker]Selects created via the DOM do not work

Categories

(Core :: Layout: Form Controls, defect, P3)

x86
Windows 95
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: rods, Assigned: rods)

References

Details

Attachments

(1 file)

See bug 16821 for the testcase
Assignee: karnaze → rods
Severity: normal → blocker
Target Milestone: M11
assigned to M11 as a blocker.
Here is what needs to be done for M11: This code needs to be added to the CreateElement method in the nsHTMLDocument.cpp: nsresult result; nsCOMPtr<nsISelectElement> select = do_QueryInterface(content, &result); if (NS_SUCCEEDED(result)) { result = select->DoneAddingContent(); } And : nsHTMLSelectElement::DoneAddingContent() needs to always returns NS_OK
Here is the diff that fixes the XUL, I'll check this in tomorrow: Index: nsXULDocument.cpp =================================================================== RCS file: /cvsroot/mozilla/rdf/content/src/nsXULDocument.cpp,v retrieving revision 1.188 diff -r1.188 nsXULDocument.cpp 117a118 > #include "nsISelectElement.h" 4739a4741,4745 > nsresult srv; > nsCOMPtr<nsISelectElement> select = do_QueryInterface(element, &srv); > if (NS_SUCCEEDED(srv)) { > srv = select->DoneAddingContent(); > }
Here is the diff that fixes the XUL's selct: Index: nsXULDocument.cpp =================================================================== RCS file: /cvsroot/mozilla/rdf/content/src/nsXULDocument.cpp,v retrieving revision 1.188 diff -r1.188 nsXULDocument.cpp 117a118 > #include "nsISelectElement.h" 4739a4741,4745 > nsresult srv; > nsCOMPtr<nsISelectElement> select = do_QueryInterface(element, &srv); > if (NS_SUCCEEDED(srv)) { > srv = select->DoneAddingContent(); > }
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Just checked in the fixes.
*** Bug 18885 has been marked as a duplicate of this bug. ***
QA Contact: cpratt → gerardok
gerardo, can you have someone verify please? Thanks!
Status: RESOLVED → VERIFIED
Verified on 1999-12-21-09-M13 build.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: