Added notification to the select in CreateElemenet to tell it it is complete. r=vidur(sort iof, we talked about this change on friday) bug 18784